--- a/Makefile.am
+++ b/Makefile.am
@@ -184,13 +184,12 @@ libbibledit_a_SOURCES = \
 	compare/index.cpp \
 	compare/compare.cpp \
 	jobs/index.cpp \
-	redirect/index.cpp \
-  editone2/index.cpp \
-  editone2/load.cpp \
-  editone2/save.cpp \
-  editone2/verse.cpp \
-  editone2/logic.cpp \
-  editone2/update.cpp \
+  editone/index.cpp \
+  editone/load.cpp \
+  editone/save.cpp \
+  editone/verse.cpp \
+  editone/logic.cpp \
+  editone/update.cpp \
 	navigation/passage.cpp \
 	navigation/update.cpp \
 	navigation/poll.cpp \
