Initiate styles version 2
1. Ideas.
2. Design.
https://github.com/bibledit/cloud/issues/990

--- a/Makefile.am
+++ b/Makefile.am
@@ -546,7 +546,8 @@ libbibledit_a_SOURCES = \
   tidy/tags.c \
   tidy/tidylib.c \
   tidy/tmbstr.c \
-  tidy/utf8.c
+  tidy/utf8.c \
+  stylesv2/logic.cpp
 
 bin_PROGRAMS = server unittest generate
 
