--- a/Makefile.in
+++ b/Makefile.in
@@ -418,7 +418,8 @@ am_libbibledit_a_OBJECTS = library/bibledit.$(OBJEXT) \
 	tidy/pprint.$(OBJEXT) tidy/sprtf.$(OBJEXT) \
 	tidy/streamio.$(OBJEXT) tidy/tagask.$(OBJEXT) \
 	tidy/tags.$(OBJEXT) tidy/tidylib.$(OBJEXT) \
-	tidy/tmbstr.$(OBJEXT) tidy/utf8.$(OBJEXT)
+	tidy/tmbstr.$(OBJEXT) tidy/utf8.$(OBJEXT) \
+	stylesv2/logic.$(OBJEXT)
 libbibledit_a_OBJECTS = $(am_libbibledit_a_OBJECTS)
 am_generate_OBJECTS = executable/generate.$(OBJEXT) \
 	sources/styles.$(OBJEXT)
@@ -779,12 +780,12 @@ am__depfiles_remade = access/$(DEPDIR)/bible.Po \
 	styles/$(DEPDIR)/css.Po styles/$(DEPDIR)/indexm.Po \
 	styles/$(DEPDIR)/logic.Po styles/$(DEPDIR)/sheetm.Po \
 	styles/$(DEPDIR)/sheets.Po styles/$(DEPDIR)/view.Po \
-	sword/$(DEPDIR)/logic.Po sync/$(DEPDIR)/bibles.Po \
-	sync/$(DEPDIR)/changes.Po sync/$(DEPDIR)/files.Po \
-	sync/$(DEPDIR)/logic.Po sync/$(DEPDIR)/mail.Po \
-	sync/$(DEPDIR)/notes.Po sync/$(DEPDIR)/resources.Po \
-	sync/$(DEPDIR)/settings.Po sync/$(DEPDIR)/setup.Po \
-	sync/$(DEPDIR)/usfmresources.Po \
+	stylesv2/$(DEPDIR)/logic.Po sword/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/bibles.Po sync/$(DEPDIR)/changes.Po \
+	sync/$(DEPDIR)/files.Po sync/$(DEPDIR)/logic.Po \
+	sync/$(DEPDIR)/mail.Po sync/$(DEPDIR)/notes.Po \
+	sync/$(DEPDIR)/resources.Po sync/$(DEPDIR)/settings.Po \
+	sync/$(DEPDIR)/setup.Po sync/$(DEPDIR)/usfmresources.Po \
 	system/$(DEPDIR)/googletranslate.Po system/$(DEPDIR)/index.Po \
 	system/$(DEPDIR)/logic.Po tasks/$(DEPDIR)/logic.Po \
 	tasks/$(DEPDIR)/run.Po text/$(DEPDIR)/text.Po \
@@ -1641,7 +1642,8 @@ libbibledit_a_SOURCES = \
   tidy/tags.c \
   tidy/tidylib.c \
   tidy/tmbstr.c \
-  tidy/utf8.c
+  tidy/utf8.c \
+  stylesv2/logic.cpp
 
 server_SOURCES = executable/bibledit.cpp
 server_LDADD = libbibledit.a
@@ -3470,6 +3472,14 @@ tidy/tmbstr.$(OBJEXT): tidy/$(am__dirstamp) \
 	tidy/$(DEPDIR)/$(am__dirstamp)
 tidy/utf8.$(OBJEXT): tidy/$(am__dirstamp) \
 	tidy/$(DEPDIR)/$(am__dirstamp)
+stylesv2/$(am__dirstamp):
+	@$(MKDIR_P) stylesv2
+	@: >>stylesv2/$(am__dirstamp)
+stylesv2/$(DEPDIR)/$(am__dirstamp):
+	@$(MKDIR_P) stylesv2/$(DEPDIR)
+	@: >>stylesv2/$(DEPDIR)/$(am__dirstamp)
+stylesv2/logic.$(OBJEXT): stylesv2/$(am__dirstamp) \
+	stylesv2/$(DEPDIR)/$(am__dirstamp)
 
 libbibledit.a: $(libbibledit_a_OBJECTS) $(libbibledit_a_DEPENDENCIES) $(EXTRA_libbibledit_a_DEPENDENCIES) 
 	$(AM_V_at)-rm -f libbibledit.a
@@ -3745,6 +3755,7 @@ mostlyclean-compile:
 	-rm -f sqlite/*.$(OBJEXT)
 	-rm -f statistics/*.$(OBJEXT)
 	-rm -f styles/*.$(OBJEXT)
+	-rm -f stylesv2/*.$(OBJEXT)
 	-rm -f sword/*.$(OBJEXT)
 	-rm -f sync/*.$(OBJEXT)
 	-rm -f system/*.$(OBJEXT)
@@ -4253,6 +4264,7 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/sheetm.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/sheets.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@styles/$(DEPDIR)/view.Po@am__quote@ # am--include-marker
+@AMDEP_TRUE@@am__include@ @am__quote@stylesv2/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sword/$(DEPDIR)/logic.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sync/$(DEPDIR)/bibles.Po@am__quote@ # am--include-marker
 @AMDEP_TRUE@@am__include@ @am__quote@sync/$(DEPDIR)/changes.Po@am__quote@ # am--include-marker
@@ -4910,6 +4922,8 @@ distclean-generic:
 	-$(am__rm_f) statistics/$(am__dirstamp)
 	-$(am__rm_f) styles/$(DEPDIR)/$(am__dirstamp)
 	-$(am__rm_f) styles/$(am__dirstamp)
+	-$(am__rm_f) stylesv2/$(DEPDIR)/$(am__dirstamp)
+	-$(am__rm_f) stylesv2/$(am__dirstamp)
 	-$(am__rm_f) sword/$(DEPDIR)/$(am__dirstamp)
 	-$(am__rm_f) sword/$(am__dirstamp)
 	-$(am__rm_f) sync/$(DEPDIR)/$(am__dirstamp)
@@ -5441,6 +5455,7 @@ distclean: distclean-am
 	-rm -f styles/$(DEPDIR)/sheetm.Po
 	-rm -f styles/$(DEPDIR)/sheets.Po
 	-rm -f styles/$(DEPDIR)/view.Po
+	-rm -f stylesv2/$(DEPDIR)/logic.Po
 	-rm -f sword/$(DEPDIR)/logic.Po
 	-rm -f sync/$(DEPDIR)/bibles.Po
 	-rm -f sync/$(DEPDIR)/changes.Po
@@ -6119,6 +6134,7 @@ maintainer-clean: maintainer-clean-am
 	-rm -f styles/$(DEPDIR)/sheetm.Po
 	-rm -f styles/$(DEPDIR)/sheets.Po
 	-rm -f styles/$(DEPDIR)/view.Po
+	-rm -f stylesv2/$(DEPDIR)/logic.Po
 	-rm -f sword/$(DEPDIR)/logic.Po
 	-rm -f sync/$(DEPDIR)/bibles.Po
 	-rm -f sync/$(DEPDIR)/changes.Po
