Basic editor for styles v2
https://github.com/bibledit/cloud/issues/990

--- a/Makefile.am
+++ b/Makefile.am
@@ -98,6 +98,7 @@ libbibledit_a_SOURCES = \
 	styles/indexm.cpp \
 	styles/sheetm.cpp \
 	styles/view.cpp \
+	styles/view2.cpp \
 	styles/css.cpp \
 	styles/sheets.cpp \
 	text/text.cpp \
