Build on newest (broken) macport icu

--- a/Makefile.am
+++ b/Makefile.am
@@ -697,7 +697,7 @@ LIBS += $(CURL_LIBS)
 LIBS += $(OPENSSL_LIBS)
 LIBS += $(GTK_LIBS)
 LIBS += $(WEBKIT2GTK_LIBS)
-LIBS += $(ICU_LIBS)
+LIBS += $(ICU_LIBS) -licuuc
 LIBS += $(XML2_LIBS)
 LIBS += $(UTF8PROC_LIBS)
 # LIBS += $(TIDY_LIBS)
