--- a/Makefile.in
+++ b/Makefile.in
@@ -1024,7 +1024,8 @@ LIBOBJS = @LIBOBJS@
 # LIBS += $(TIDY_LIBS)
 LIBS = -Wall -lpthread -L. -g -rdynamic -ldl $(CURL_LIBS) \
 	$(OPENSSL_LIBS) $(GTK_LIBS) $(WEBKIT2GTK_LIBS) $(ICU_LIBS) \
-	$(XML2_LIBS) $(UTF8PROC_LIBS) $(PUGIXML_LIBS) $(GTEST_LIBS)
+	-licuuc $(XML2_LIBS) $(UTF8PROC_LIBS) $(PUGIXML_LIBS) \
+	$(GTEST_LIBS)
 LTLIBOBJS = @LTLIBOBJS@
 MAKEINFO = @MAKEINFO@
 MKDIR_P = @MKDIR_P@
